--- a/calculator/style.css
+++ b/calculator/style.css
@@ -80,7 +80,7 @@ body {
     border: 3px solid #586a8d;
     border-radius: 10px;
     cursor: pointer;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -103,6 +103,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 20px;
+    flex-wrap: wrap;
 }
 .bt1 {
     width: 80px;
@@ -110,15 +111,17 @@ body {
     border-radius: 15px;
     border: none;
     font-size: 32px;
-    color: #fb4646;
+    color: #586a8d;
     cursor: pointer;
     outline: none;
+    margin: 5px;
 }
 .bt1:hover {
     border: 8px solid #161d2f;
     border-radius:20px ;
     font-size: 24px;
     font-weight: 500;
+    color: #fb4646;
 }
 
 #buttons-2 {
@@ -128,18 +131,25 @@ body {
     margin-bottom: 20px;
 }
 .bt2 {
-    width: 170px;
+    width: 190px;
     height: 80px;
     border-radius: 15px;
     border: none;
     font-size: 30px;
-    color: #fb4646;
+    color: #586a8d;
     cursor: pointer;
     outline: none;
+    margin-top: 5px;
 }
 .bt2:hover {
     border: 8px solid #161d2f;
     border-radius:20px ;
     font-size: 24px;
     font-weight: 500;
+    color: #fb4646;
 }
+#bad {
+    color: #586a8d;
+    font-size: 16px;
+}
+
